--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"eslint-plugin-require-extensions": "^0.1.3",
 		"eslint-plugin-tsdoc": "^0.2.17",
 		"eslint-plugin-unused-imports": "^3.0.0",
+        "graphql-config": "^5.0.3",
 		"prettier": "^3.0.0",
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"tsx": "^3.12.7",
