--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -23,6 +23,7 @@ im.workspace = true
 indexmap.workspace = true
 itertools.workspace = true
 lru.workspace = true
+moka.workspace = true
 num_cpus.workspace = true
 object_store.workspace = true
 once_cell.workspace = true
