wiring feature dependency chain

--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -79,4 +79,9 @@ harness = false
 
 [features]
 test-utils = []
+gas-profiler = [
+    "move-vm-profiler/gas-profiler",
+    "move-vm-types/gas-profiler",
+    "move-vm-test-utils/gas-profiler"
+]
 fuzzing = ["move-core-types/fuzzing"]
