--- a/crates/sui-e2e-tests/Cargo.toml
+++ b/crates/sui-e2e-tests/Cargo.toml
@@ -55,7 +55,7 @@ sui-swarm.workspace = true
 sui-test-transaction-builder.workspace = true
 sui-config.workspace = true
 sui-json-rpc-types.workspace = true
-sui.workspace = true
+sui = {workspace = true, default-features = false}
 sui-sdk.workspace = true
 sui-keys.workspace = true
 workspace-hack.workspace = true
