disable gas-profiler by default for all binaries

--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -78,6 +78,7 @@ name = "accumulator_bench"
 harness = false
 
 [features]
+default = []
 test-utils = []
 gas-profiler = [
     "move-vm-profiler/gas-profiler",
