--- a/sui-execution/v0/sui-adapter/Cargo.toml
+++ b/sui-execution/v0/sui-adapter/Cargo.toml
@@ -18,18 +18,18 @@ serde.workspace = true
 move-binary-format.workspace = true
 move-bytecode-utils.workspace = true
 move-core-types.workspace = true
-move-vm-config.workspace = true
-move-vm-profiler.workspace = true
-move-vm-types.workspace = true
+move-vm-config = { workspace = true, features = ["gas-profiler"] }
+move-vm-profiler = { workspace = true, features = ["gas-profiler"] }
+move-vm-types = { workspace = true, features = ["gas-profiler"] }
 
 move-bytecode-verifier = { path = "../../../external-crates/move/move-execution/v0/move-bytecode-verifier", package = "move-bytecode-verifier-v0" }
-move-vm-runtime = { path = "../../../external-crates/move/move-execution/v0/move-vm/runtime", package = "move-vm-runtime-v0" }
+move-vm-runtime = { path = "../../../external-crates/move/move-execution/v0/move-vm/runtime", package = "move-vm-runtime-v0", features = ["gas-profiler"] }
 sui-move-natives = { path = "../sui-move-natives", package = "sui-move-natives-v0" }
 sui-verifier = { path = "../sui-verifier", package = "sui-verifier-v0" }
 
 sui-macros.workspace = true
 sui-protocol-config.workspace = true
-sui-types.workspace = true
+sui-types = { workspace = true, features = ["gas-profiler"] }
 parking_lot.workspace = true
 workspace-hack.workspace = true
 
