--- a/external-crates/move/crates/move-vm-profiler/Cargo.toml
+++ b/external-crates/move/crates/move-vm-profiler/Cargo.toml
@@ -11,7 +11,7 @@ serde.workspace = true
 serde_json.workspace = true
 once_cell.workspace = true
 
-move-vm-config.workspace = true
+move-vm-config = { workspace = true, features = ["gas-profiler"] }
 
 [features]
 gas-profiler = ["move-vm-config/gas-profiler"]
