--- a/external-crates/move/crates/move-vm-types/Cargo.toml
+++ b/external-crates/move/crates/move-vm-types/Cargo.toml
@@ -18,7 +18,7 @@ bcs.workspace = true
 
 move-core-types.workspace = true
 move-binary-format.workspace = true
-move-vm-profiler.workspace = true
+move-vm-profiler = { workspace = true, features = ["gas-profiler"] }
 
 [dev-dependencies]
 proptest.workspace = true
