--- a/sui-execution/v1/sui-adapter/Cargo.toml
+++ b/sui-execution/v1/sui-adapter/Cargo.toml
@@ -17,18 +17,18 @@ serde.workspace = true
 move-binary-format.workspace = true
 move-bytecode-utils.workspace = true
 move-core-types.workspace = true
-move-vm-config.workspace = true
-move-vm-types.workspace = true
+move-vm-config = { workspace = true, features = ["gas-profiler"] }
+move-vm-types = { workspace = true, features = ["gas-profiler"] }
 
 move-bytecode-verifier = { path = "../../../external-crates/move/move-execution/v1/crates/move-bytecode-verifier", package = "move-bytecode-verifier-v1" }
-move-vm-runtime = { path = "../../../external-crates/move/move-execution/v1/crates/move-vm-runtime", package = "move-vm-runtime-v1" }
-move-vm-profiler = { path = "../../../external-crates/move/crates/move-vm-profiler" }
+move-vm-runtime = { path = "../../../external-crates/move/move-execution/v1/crates/move-vm-runtime", package = "move-vm-runtime-v1", features = ["gas-profiler"] }
+move-vm-profiler = { path = "../../../external-crates/move/crates/move-vm-profiler", features = ["gas-profiler"]}
 sui-move-natives = { path = "../sui-move-natives", package = "sui-move-natives-v1" }
 sui-verifier = { path = "../sui-verifier", package = "sui-verifier-v1" }
 
 sui-macros.workspace = true
 sui-protocol-config.workspace = true
-sui-types.workspace = true
+sui-types = { workspace = true, features = ["gas-profiler"] }
 parking_lot.workspace = true
 workspace-hack.workspace = true
 
