--- a/crates/sui/Cargo.toml
+++ b/crates/sui/Cargo.toml
@@ -68,6 +68,7 @@ move-core-types.workspace = true
 move-package.workspace = true
 csv.workspace = true
 workspace-hack.workspace = true
+move-vm-profiler.workspace = true
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemalloc-ctl.workspace = true
