--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -135,6 +135,7 @@
 		"@sentry/browser": "^7.61.0",
 		"@tanstack/react-query": "^5.0.0",
 		"@tanstack/react-query-persist-client": "^4.29.25",
+		"bech32": "^2.0.0",
 		"bignumber.js": "^9.1.1",
 		"bootstrap-icons": "^1.10.5",
 		"buffer": "^6.0.3",
