--- a/crates/sui-analytics-indexer/Cargo.toml
+++ b/crates/sui-analytics-indexer/Cargo.toml
@@ -50,6 +50,7 @@ move-bytecode-utils.workspace = true
 sui-json-rpc-types.workspace = true
 sui-package-resolver.workspace = true
 workspace-hack.workspace = true
+gcp-bigquery-client = "0.18.0"
 
 [dev-dependencies]
 
