--- a/crates/sui-source-validation/Cargo.toml
+++ b/crates/sui-source-validation/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-source-validation"
-version = "0.1.0"
+version.workspace = true
 authors = ["Mysten Labs <build@mystenlabs.com>"]
 license = "Apache-2.0"
 publish = false
@@ -11,7 +11,9 @@ path = "src/lib.rs"
 
 [dependencies]
 anyhow.workspace = true
+colored.workspace = true
 thiserror.workspace = true
+tracing.workspace = true
 futures.workspace = true
 
 sui-json-rpc-types.workspace = true
@@ -20,11 +22,16 @@ sui-sdk.workspace = true
 sui-move-build.workspace = true
 
 move-binary-format.workspace = true
+move-bytecode-source-map = { path = "../../external-crates/move/crates/move-bytecode-source-map" }
+move-command-line-common.workspace = true
 move-compiler.workspace = true
 move-core-types.workspace = true
 move-package.workspace = true
 move-symbol-pool.workspace = true
 workspace-hack.workspace = true
+tar = "0.4.40"
+flate2 = "1.0.28"
+ureq = "2.9.1"
 
 [dev-dependencies]
 
